// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`csharp snapshot 1`] = `
Object {
  "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.parameter.Scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope",
      "optional": undefined,
      "type": Object {
        "name": "%",
        "types": Array [
          Object {
            "fqn": "Amazon.CDK.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "1.106.0",
            "submodule": undefined,
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.parameter.Id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id",
      "optional": undefined,
      "type": Object {
        "name": "string",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- resource properties.",
      },
      "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepository.parameter.Props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props",
      "optional": true,
      "type": Object {
        "name": "%",
        "types": Array [
          Object {
            "fqn": "Amazon.CDK.AWS.ECR.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "1.106.0",
            "submodule": undefined,
          },
        ],
      },
    },
  ],
  "usage": "using Amazon.CDK.AWS.ECR;

new CfnPublicRepository(Construct Scope, string Id, CfnPublicRepositoryProps Props = null);",
}
`;

exports[`csharp snapshot 2`] = `
" Initializers <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

<pre lang=\\"csharp\\">
using Amazon.CDK.AWS.ECR;

new CfnPublicRepository(Construct Scope, string Id, CfnPublicRepositoryProps Props = null);
</pre>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\">Scope</a></code> | <code><a href=\\"#@aws-cdk/core.Construct\\">Construct</a></code> | - scope in which this resource is defined. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\">Id</a></code> | <code>string</code> | - scoped id of the resource. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props\\">Props</a></code> | <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a></code> | - resource properties. |

---

# \`Scope\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\"></a>

- *Type:* <a href=\\"#@aws-cdk/core.Construct\\">Construct</a>

scope in which this resource is defined.

---

# \`Id\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\"></a>

- *Type:* string

scoped id of the resource.

---

# \`Props\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props\\"></a>

- *Type:* <a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a>

resource properties.

---
"
`;

exports[`java snapshot 1`] = `
Object {
  "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope",
      "optional": undefined,
      "type": Object {
        "name": "%",
        "types": Array [
          Object {
            "fqn": "software.amazon.awscdk.core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "1.106.0",
            "submodule": undefined,
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id",
      "optional": undefined,
      "type": Object {
        "name": "java.lang.String",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.parameter.repositoryCatalogData",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "java.lang.Object",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.parameter.repositoryName",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryName",
      "optional": true,
      "type": Object {
        "name": "java.lang.String",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.parameter.repositoryPolicyText",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "java.lang.Object",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "software.amazon.awscdk.services.ecr.CfnPublicRepository.parameter.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.tags",
      "optional": true,
      "type": Object {
        "name": "java.util.List<%>",
        "types": Array [
          Object {
            "name": "%",
            "types": Array [
              Object {
                "fqn": "software.amazon.awscdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        ],
      },
    },
  ],
  "usage": "import software.amazon.awscdk.services.ecr.CfnPublicRepository;

CfnPublicRepository.Builder.create(Construct scope, java.lang.String id)
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();",
}
`;

exports[`java snapshot 2`] = `
" Initializers <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

<pre lang=\\"java\\">
import software.amazon.awscdk.services.ecr.CfnPublicRepository;

CfnPublicRepository.Builder.create(Construct scope, java.lang.String id)
//  .repositoryCatalogData(java.lang.Object)
//  .repositoryName(java.lang.String)
//  .repositoryPolicyText(java.lang.Object)
//  .tags(java.util.List<CfnTag>)
    .build();
</pre>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\">scope</a></code> | <code><a href=\\"#@aws-cdk/core.Construct\\">Construct</a></code> | - scope in which this resource is defined. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\">id</a></code> | <code>java.lang.String</code> | - scoped id of the resource. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryCatalogData\\">repositoryCatalogData</a></code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryName\\">repositoryName</a></code> | <code>java.lang.String</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryPolicyText\\">repositoryPolicyText</a></code> | <code>java.lang.Object</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.tags\\">tags</a></code> | <code>java.util.List<<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>></code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

# \`scope\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\"></a>

- *Type:* <a href=\\"#@aws-cdk/core.Construct\\">Construct</a>

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\"></a>

- *Type:* java.lang.String

scoped id of the resource.

---

# \`repositoryCatalogData\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryCatalogData\\"></a>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---

# \`repositoryName\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryName\\"></a>

- *Type:* java.lang.String

\`AWS::ECR::PublicRepository.RepositoryName\`.

---

# \`repositoryPolicyText\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryPolicyText\\"></a>

- *Type:* java.lang.Object

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

---

# \`tags\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.tags\\"></a>

- *Type:* java.util.List<<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>>

\`AWS::ECR::PublicRepository.Tags\`.

---
"
`;

exports[`python snapshot 1`] = `
Object {
  "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope",
      "optional": undefined,
      "type": Object {
        "name": "%",
        "types": Array [
          Object {
            "fqn": "aws_cdk.core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "1.106.0",
            "submodule": undefined,
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id",
      "optional": undefined,
      "type": Object {
        "name": "str",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.parameter.repository_catalog_data",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryCatalogData",
      "optional": true,
      "type": Object {
        "name": "typing.Any",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryName\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.parameter.repository_name",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryName",
      "optional": true,
      "type": Object {
        "name": "str",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.parameter.repository_policy_text",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryPolicyText",
      "optional": true,
      "type": Object {
        "name": "typing.Any",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "\`AWS::ECR::PublicRepository.Tags\`.",
      },
      "fqn": "aws_cdk.aws_ecr.CfnPublicRepository.parameter.tags",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.tags",
      "optional": true,
      "type": Object {
        "name": "typing.List[%]",
        "types": Array [
          Object {
            "name": "%",
            "types": Array [
              Object {
                "fqn": "aws_cdk.core.CfnTag",
                "id": "@aws-cdk/core.CfnTag",
                "packageName": "@aws-cdk/core",
                "packageVersion": "1.106.0",
                "submodule": undefined,
              },
            ],
          },
        ],
      },
    },
  ],
  "usage": "import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepository(
  scope: Construct,
  id: str,
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)",
}
`;

exports[`python snapshot 2`] = `
" Initializers <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

<pre lang=\\"python\\">
import aws_cdk.aws_ecr

aws_cdk.aws_ecr.CfnPublicRepository(
  scope: Construct,
  id: str,
  repository_catalog_data: typing.Any = None,
  repository_name: str = None,
  repository_policy_text: typing.Any = None,
  tags: typing.List[CfnTag] = None
)
</pre>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\">scope</a></code> | <code><a href=\\"#@aws-cdk/core.Construct\\">Construct</a></code> | - scope in which this resource is defined. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\">id</a></code> | <code>str</code> | - scoped id of the resource. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryCatalogData\\">repository_catalog_data</a></code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryCatalogData\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryName\\">repository_name</a></code> | <code>str</code> | \`AWS::ECR::PublicRepository.RepositoryName\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryPolicyText\\">repository_policy_text</a></code> | <code>typing.Any</code> | \`AWS::ECR::PublicRepository.RepositoryPolicyText\`. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.tags\\">tags</a></code> | <code>typing.List[<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>]</code> | \`AWS::ECR::PublicRepository.Tags\`. |

---

# \`scope\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\"></a>

- *Type:* <a href=\\"#@aws-cdk/core.Construct\\">Construct</a>

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\"></a>

- *Type:* str

scoped id of the resource.

---

# \`repository_catalog_data\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryCatalogData\\"></a>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryCatalogData\`.

---

# \`repository_name\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryName\\"></a>

- *Type:* str

\`AWS::ECR::PublicRepository.RepositoryName\`.

---

# \`repository_policy_text\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.repositoryPolicyText\\"></a>

- *Type:* typing.Any

\`AWS::ECR::PublicRepository.RepositoryPolicyText\`.

---

# \`tags\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.tags\\"></a>

- *Type:* typing.List[<a href=\\"#@aws-cdk/core.CfnTag\\">CfnTag</a>]

\`AWS::ECR::PublicRepository.Tags\`.

---
"
`;

exports[`typescript snapshot 1`] = `
Object {
  "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "id": "@aws-cdk/aws-ecr.CfnPublicRepository.Initializer",
  "parameters": Array [
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scope in which this resource is defined.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope",
      "optional": undefined,
      "type": Object {
        "name": "%",
        "types": Array [
          Object {
            "fqn": "@aws-cdk/core.Construct",
            "id": "@aws-cdk/core.Construct",
            "packageName": "@aws-cdk/core",
            "packageVersion": "1.106.0",
            "submodule": undefined,
          },
        ],
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- scoped id of the resource.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id",
      "optional": undefined,
      "type": Object {
        "name": "string",
      },
    },
    Object {
      "default": undefined,
      "docs": Object {
        "summary": "- resource properties.",
      },
      "fqn": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props",
      "id": "@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props",
      "optional": true,
      "type": Object {
        "name": "%",
        "types": Array [
          Object {
            "fqn": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "id": "@aws-cdk/aws-ecr.CfnPublicRepositoryProps",
            "packageName": "@aws-cdk/aws-ecr",
            "packageVersion": "1.106.0",
            "submodule": undefined,
          },
        ],
      },
    },
  ],
  "usage": "import { CfnPublicRepository } from '@aws-cdk/aws-ecr'

new CfnPublicRepository(scope: Construct, id: string, props?: CfnPublicRepositoryProps)",
}
`;

exports[`typescript snapshot 2`] = `
" Initializers <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.Initializer\\"></a>

<pre lang=\\"typescript\\">
import { CfnPublicRepository } from '@aws-cdk/aws-ecr'

new CfnPublicRepository(scope: Construct, id: string, props?: CfnPublicRepositoryProps)
</pre>

| **Name** | **Type** | **Description** |
| --- | --- | --- |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\">scope</a></code> | <code><a href=\\"#@aws-cdk/core.Construct\\">Construct</a></code> | - scope in which this resource is defined. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\">id</a></code> | <code>string</code> | - scoped id of the resource. |
| <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props\\">props</a></code> | <code><a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a></code> | - resource properties. |

---

# \`scope\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.scope\\"></a>

- *Type:* <a href=\\"#@aws-cdk/core.Construct\\">Construct</a>

scope in which this resource is defined.

---

# \`id\`<sup>Required</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.id\\"></a>

- *Type:* string

scoped id of the resource.

---

# \`props\`<sup>Optional</sup> <a id=\\"@aws-cdk/aws-ecr.CfnPublicRepository.parameter.props\\"></a>

- *Type:* <a href=\\"#@aws-cdk/aws-ecr.CfnPublicRepositoryProps\\">CfnPublicRepositoryProps</a>

resource properties.

---
"
`;
